--- a/custom.css
+++ b/custom.css
@@ -1,9 +1,13 @@
 .reveal code {
   background-color: #f3eecf;
   font-family: monospace;
-  padding-left: 5px;
-  padding-right: 5px;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
   text-transform: none;
+}
+
+.reveal h1 {
+  text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2), 0 4px 8px rgba(0, 0, 0, 0.25), 0 15px 15px rgba(0, 0, 0, 0.15);
 }
 
 .reveal h2 {
@@ -27,14 +31,14 @@
 }
 
 .reveal li {
-  font-size: 80%;
-  line-height: 1.2em;
-  margin-left: 30px;
-  padding-bottom: 8px;
+  font-size: 0.8em;
+  line-height: 1.4em;
+  margin-left: 2em;
+  padding-bottom: 0.2em;
 }
 
 .reveal p {
-  font-size: 80%;
+  font-size: 0.8em;
 }
 
 .reveal section img {
@@ -47,11 +51,11 @@
 }
 
 .reveal th {
-  font-size: 85%;
+  font-size: 0.8em;
 }
 
 .reveal td {
-  font-size: 70%;
+  font-size: 0.7em;
 }
 
 .reveal .slides section {
@@ -59,10 +63,10 @@
 }
 
 .reveal .slides section>* {
-  margin-left: 15px;
-  margin-right: 5px;
+  margin-left: 2em;
+  margin-right: 0.5em;
 }
 
 #title-footer #notification {
-  font-size: 70%;
+  font-size: 0.7em;
 }
