--- a/custom.css
+++ b/custom.css
@@ -7,6 +7,7 @@
 }
 
 .reveal h1 {
+  font-size: 3.6em;
   text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2), 0 4px 8px rgba(0, 0, 0, 0.25), 0 15px 15px rgba(0, 0, 0, 0.15);
 }
 
@@ -27,14 +28,14 @@
 }
 
 .reveal ul {
-  margin-top: 0.6em;
+  margin-bottom: 0.5em;
+  margin-top: 0.5em;
 }
 
 .reveal li {
   font-size: 0.8em;
-  line-height: 1.4em;
+  line-height: 1.8em;
   margin-left: 2em;
-  padding-bottom: 0.2em;
 }
 
 .reveal p {
